# dawikk-scan

./: README.md  dawikk-scan.podspec  package-lock.json  package.json  tsconfig.json
android/: CMakeLists.txt
android/src/main/cpp/: scan_jni.cpp
android/src/main/java/com/dawikk/scan/: RNScanModule.java
cpp/bridge/: scan_bridge.cpp  scan_bridge.h
cpp/scan/: scan.ini
ios/: RNScanModule.h  RNScanModule.m
lib/commonjs/: index.js  index.js.map
lib/module/: index.js  index.js.map
src/: index.tsx
